<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_info_bubble"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:text=""/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvo3SubIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o3_sub_index"/>

        <TextView
            android:id="@+id/tvO3SubIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvo3SubIndex"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPM1024"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm10_twenty_four_hourly"/>

        <TextView
            android:id="@+id/tvPM1024Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPM1024"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPM10SubIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm10_sub_index"/>

        <TextView
            android:id="@+id/tvPM10SubIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPM10SubIndex"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCOSubIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_sub_index"/>

        <TextView
            android:id="@+id/tvCOSubIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvCOSubIndex"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPM2524"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm25_twenty_four_hourly"/>

        <TextView
            android:id="@+id/tvPM2524Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPM2524"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSO2SubIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so2_sub_index"/>

        <TextView
            android:id="@+id/tvSO2SubIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvSO2SubIndex"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCO8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_eight_hour_max"/>

        <TextView
            android:id="@+id/tvCO8Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvCO8"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no2_one_hour_max"/>

        <TextView
            android:id="@+id/tvNO2Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvNO2"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSO224"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so2_twenty_four_hourly"/>

        <TextView
            android:id="@+id/tvSO224Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvSO224"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPM25SubIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm25_twenty_four_hourly"/>

        <TextView
            android:id="@+id/tvPM25SubIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPM25SubIndex"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psi_twenty_four_hourly"/>

        <TextView
            android:id="@+id/tvPSIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPSI"
            android:text="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvO3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o3_eight_hour_max"/>

        <TextView
            android:id="@+id/tvO3Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvO3"
            android:text="1"/>

    </RelativeLayout>

</LinearLayout>
